--- a/index.html
+++ b/index.html
@@ -59,6 +59,148 @@
       </div>
     </section>
     <!-- end of banner -->
+
+    <!-- skills -->
+    <section class="bg-light p-5">
+      <div class="container-fluid">
+        <!-- title -->
+        <div class="row">
+          <div class="col text-center mb-3">
+            <h1 class="text-warning display-2">Skills</h1>
+            <p class="lead text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit perferendis facilis magni.</p>
+          </div>
+        </div>
+        <!-- end title -->
+        <div class="row text-center">
+          <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+            <i class="fas fa-desktop fa-6x text-warning mb-3"></i>
+            <h1 class="text-secondary">Development</h1>
+            <p class="text-muted my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis id officiis cum eius maiores iste amet velit temporibus, enim quos.</p>
+            <a href="#" class="btn btn-outline-warning">Learn more</a>
+          </div>
+          <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+            <i class="far fa-edit fa-6x text-warning mb-3"></i>
+            <h1 class="text-secondary">Design</h1>
+            <p class="text-muted my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis id officiis cum eius maiores iste amet velit temporibus, enim quos.</p>
+             <a href="#" class="btn btn-outline-warning">Learn more</a>  
+          </div>
+          <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+            <i class="fas fa-cogs fa-6x text-warning mb-3"></i>
+            <h1 class="text-secondary">Creativity</h1>
+            <p class="text-muted my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis id officiis cum eius maiores iste amet velit temporibus, enim quos.</p>
+             <a href="#" class="btn btn-outline-warning">Learn more</a>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <!-- end of skills -->
+    
+    <!-- project -->
+    <section class="p-5">
+      <div class="container-fluid">
+        <!-- title -->
+        <div class="row">
+          <div class="col text-center mb-3">
+            <h1 class="text-warning display-2">Projects</h1>
+            <p class="lead text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit perferendis facilis magni.</p>
+          </div>
+        </div>
+        <!-- end title -->
+        <div class="row">
+          <div class="col-lg-3 col-sm-6">
+            <img src="images/project1.jpg" class="img-thumbnail">
+            <h2 class="my-3 text-warning">Project One</h2>
+            <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eius.</p>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <img src="images/project2.jpg" class="img-thumbnail">
+            <h2 class="my-3 text-warning">Project Two</h2>
+            <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eius.</p>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <img src="images/project3.jpg" class="img-thumbnail">
+            <h2 class="my-3 text-warning">Project Three</h2>
+            <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eius.</p>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <img src="images/project4.jpg" class="img-thumbnail">
+            <h2 class="my-3 text-warning">Project Four</h2>
+            <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eius.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of projects -->
+    <!-- team -->
+    <section class="p-sm-5 p-2 bg-secondary">
+      <div class="container-fluid">
+         <!-- title -->
+         <div class="row">
+          <div class="col text-center mb-3">
+            <h1 class="text-warning display-2">Team</h1>
+            <p class="lead text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit perferendis facilis magni.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+            <div class="card">
+              <img src="images/kid1.jpg" class="card-img-top">
+              <div class="card-body">
+                <div class="card-title">
+                  <h3 class="text-muted">Michael</h3>
+                </div>
+                <div class="card-subtitle">
+                  <p class="lead text-secondary">Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="text-right">
+                  <a href="#"><i class="fab fa-facebook fa-2x mx-2"></i></a>
+                  <a href="#"><i class="fab fa-twitter fa-2x mx-2 text-info"></i></a>
+                  <a href="#"><i class="fab fa-youtube fa-2x mx-2 text-danger"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+            <div class="card">
+              <img src="images/kid2.jpg" class="card-img-top">
+              <div class="card-body">
+                <div class="card-title">
+                  <h3 class="text-muted">Jack</h3>
+                </div>
+                <div class="card-subtitle">
+                  <p class="lead text-secondary">Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="text-right">
+                  <a href="#"><i class="fab fa-facebook fa-2x mx-2"></i></a>
+                  <a href="#"><i class="fab fa-twitter fa-2x mx-2 text-info"></i></a>
+                  <a href="#"><i class="fab fa-youtube fa-2x mx-2 text-danger"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+            <div class="card">
+              <img src="images/kid3.jpg" class="card-img-top">
+              <div class="card-body">
+                <div class="card-title">
+                  <h3 class="text-muted">Ann</h3>
+                </div>
+                <div class="card-subtitle">
+                  <p class="lead text-secondary">Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="text-right">
+                  <a href="#"><i class="fab fa-facebook fa-2x mx-2"></i></a>
+                  <a href="#"><i class="fab fa-twitter fa-2x mx-2 text-info"></i></a>
+                  <a href="#"><i class="fab fa-youtube fa-2x mx-2 text-danger"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of team -->
   
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
