--- a/index.html
+++ b/index.html
@@ -201,6 +201,100 @@
       </div>
     </section>
     <!-- end of team -->
+    <!-- progress -->
+    <section class="p-5">
+      <div class="container-fluid">
+        <!-- title -->
+        <div class="row">
+          <div class="col text-center mb-3">
+            <h1 class="text-warning display-2">Progress</h1>
+            <p class="lead text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit perferendis facilis magni.</p>
+          </div>
+        </div>
+        <!-- end title -->
+        <div class="row justify-content-center">
+          <div class="col-lg-6 col-sm-10 text-secondary">
+            <h2>HTML</h2>
+            <div class="progress bg-secondary mb-3">
+              <div class="progress-bar" style="width: 50%">
+                50%
+              </div>
+            </div>
+            <h2>CSS</h2>
+            <div class="progress bg-secondary mb-3">
+              <div class="progress-bar bg-danger" style="width: 70%">
+                70%
+              </div>
+            </div>
+            <h2>HTML</h2>
+            <div class="progress bg-secondary mb-3">
+              <div class="progress-bar bg-success" style="width: 90%">
+                90%
+              </div>
+            </div>
+          </div>
+        </div> 
+      </div>
+    </section>
+    <!-- end of progress -->
+
+    <!-- contacts -->
+    <section class="p-5 bg-light">
+      <div class="container-fluid">
+         <!-- title -->
+         <div class="row">
+          <div class="col text-center mb-3">
+            <h1 class="text-warning display-2">Contact Us</h1>
+            <p class="lead text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit perferendis facilis magni.</p>
+          </div>
+        </div>
+        <!-- end title -->
+        <div class="row justify-content-center">
+          <div class="col-lg-6 col-md-8 col-sm-10">
+            <div class="text-center text-secondary">
+              <h2>Got Questions?</h2>
+              <p>Stay Connected</p>
+            </div>
+            <form class="text-muted" action="">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name">
+              </div>
+              <div class="form-group">
+                <label for="name">Email</label>
+                <input type="text" class="form-control" id="email">
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" id="message"></textarea>
+              </div>
+              <button class="btn btn-outline-warning btn-block" type="submit">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end contacts -->
+
+    <!-- footer -->
+    <footer class="bg-secondary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <h1 class="text-white font-weight-light text-capitalize p-3">pure bootstrap project</h1>
+            <h3 class="text-light font-weight-light font-italic mb-3">Lorem ipsum dolor sit amet.</h3>
+            <div class="py-2">
+              <a href=""><i class="fab fa-facebook fa-2x text-primary mx-3"></i></a>
+              <a href=""><i class="fab fa-google-plus fa-2x text-danger mx-3"></i></a>
+              <a href=""><i class="fab fa-twitter fa-2x text-info mx-3"></i></a>
+              <a href=""><i class="fab fa-youtube fa-2x text-danger mx-3"></i></a>
+            </div>
+            <p class="text-light py-4 m-0">&copy;Copyright 2023 - Made by Simon</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- end of footer -->
   
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
